# api-demo

./: .coverage  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
backend/apps/transactions/: filters.py  models.py  serializers.py  tests.py  views.py
backend/apps/transactions/migrations/: 0001_initial.py
backend/apps/wallets/: filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/wallets/migrations/: 0001_initial.py
backend/apps/wallets/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
backend/config/: settings.py  urls.py
